# jsjs

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  bnf.md  callable.go  deploy.sh  editor.css  editor.css.map  editor.js  environment.go  esbuild.js  esbuild.ts  expect.go  expression.go  global.go  go.mod  go.sh  index.html  interpreter.go  jsjs.umd.js  jsjs.umd.js.map  lox.go  main.go  package.json  parser.go  pnpm-lock.yaml  post-install.js  post-install.sh  pre-commit.sh  readme.md  return.go  rollup.config.ts  scanner.go  statement.go  token.go  tsconfig.json  utils.go  windows.cmd
.github/: dependabot.yml
.github/workflows/: main.yml
assets/: index.html
c/: chunk.c  chunk.h  clox.cbp  common.h  compiler.c  compiler.h  debug.c  main.c  memory.c  memory.h  object.h  scanner.c  scanner.h  table.h  value.c  value.h  vm.c  vm.h
js/: package.json  pre.js  tsconfig.json
js/assets/: index.html
js/src/: lox.ts  (+13 more)
scripts/: bin.ts  browser.ts  build.js  declaration.d.ts  delete.ts  editor.ts  env.js  esbuild.ts  generateAST.js  generateAST.ts  index.html  jest.config.js  jest.config.ts  main.go  post-install.js  pre.js  test.json  transform.js  transform.ts  visitTest.js  visitTest.ts  windows.js
src/: ASTPrinter.ts  Environment.ts  EventEmitter.ts  LoxCallable.ts  array.ts  browser.ts  class.ts  constant.ts  debug.ts  environment.ts  error.ts  expect.ts  expression.ts  function.ts  index.ts  interpreter.ts  jsjs.ts  lox.ts  loxCallable.ts  native.ts  node.ts  parser.ts  return.ts  returnValue.ts  scanner.ts  statement.ts  token.ts  tokenType.ts  type.ts  util.ts
(+50 files in other folders)
